--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@react-spring/parallax": "^9.5.5",
+    "gsap": "^3.11.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
